--- a/style.css
+++ b/style.css
@@ -86,12 +86,21 @@
 
 nav ul li {
     list-style: none;
-    margin: 20px 5px;
+    display: inline-block;
+    margin: 20px;
 }
 
 nav ul li a {
-    color: black;
+    width: 60px;
     text-decoration: none;
+    display: inline-block;
+    margin: 0 1px;
+    padding: 1px 0;
+    color: rgb(247, 247, 247);
+    border: 2px solid rgb(0, 0, 0);
+    position: relative;
+    z-index: 1;
+    transition: color 0.5s;
 }
 
 #info_a {
